components/hero.module.scss
.container {
	align-self: center;
	align-items: center;
	box-sizing: border-box;
	display: flex;
	justify-content: center;
	height: 500px;
	width: 100%;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
}

.bg-home 							{ background-image: url("/hero/home.jpeg"); }
.bg-7wonders 					{ background-image: url("/hero/7-wonders.jpeg"); }
.bg-awkwardGuests 		{ background-image: url("/hero/awkward-guests.webp"); }
.bg-barenpark 				{ background-image: url("/hero/barenpark.jpeg"); }
.bg-brewcrafters 			{ background-image: url("/hero/brewcrafters.jpeg"); }
.bg-clueDisney 				{ background-image: url("/hero/clue-disney.webp"); }
.bg-dinosaurWorld 		{ background-image: url("/hero/dinosaur-world.webp"); }
.bg-dixit 						{ background-image: url("/hero/dixit.jpeg"); }
.bg-evolutionClimate	{ background-image: url("/hero/evolution-climate.png"); }
.bg-monopolyDisney		{ background-image: url("/hero/monopoly-disney.jpeg"); }
.bg-obsession 				{ background-image: url("/hero/obsession.jpeg"); }
.bg-outlive 					{ background-image: url("/hero/outlive.png"); }
.bg-panAm 						{ background-image: url("/hero/panam.jpeg"); }
.bg-parks							{ background-image: url("/hero/parks.jpeg"); }
.bg-riskGameOfThrones { background-image: url("/hero/risk-game-of-thrones.jpeg"); }
.bg-santaMonica 			{ background-image: url("/hero/santa-monica.png"); }
.bg-sceneItFriends 		{ background-image: url("/hero/scene-it-friends.jpeg"); }
.bg-sushiGo 					{ background-image: url("/hero/sushi-go.jpeg"); }
.bg-trickerion 				{ background-image: url("/hero/trickerion.jpeg"); }
.bg-viticulture 			{ background-image: url("/hero/viticulture.jpeg"); }
.bg-wingspan 					{ background-image: url("/hero/wingspan.jpeg"); }

.overlay {
	background: transparent;
	background: linear-gradient(180deg, rgba(32, 32, 32, 0) 0%, rgba(32, 32, 32, 0) 50%, rgba(32, 32, 32, 1) 100%);
	height: 500px;
	width: 100%;
	margin-top: -500px;
}

.avatar {
	background-size: cover;
	background-position: center;
	border: 2px solid #fff;
	border-radius: 50%;
	margin-bottom: 1rem;
	filter: drop-shadow(5px 5px 9px rgba(0, 0, 0, .5));
	width: 150px;
	height: 150px;

	@media (min-width: 650px) {
		margin: 0;
		margin-right: 1rem;
	}
}

.avatar-home 							{ background-image: url("/hero/home.webp"); }
.avatar-7wonders 					{ background-image: url("/avatar/7-wonders.webp"); }
.avatar-awkwardGuests 		{ background-image: url("/avatar/awkward-guests.webp"); }
.avatar-barenpark 				{ background-image: url("/avatar/barenpark.webp"); }
.avatar-brewcrafters 			{ background-image: url("/avatar/brewcrafters.webp"); }
.avatar-clueDisney 				{ background-image: url("/avatar/clue-disney.webp"); }
.avatar-dinosaurWorld 		{ background-image: url("/avatar/dinosaur-world.webp"); }
.avatar-dixit 						{ background-image: url("/avatar/dixit.webp"); }
.avatar-evolutionClimate	{ background-image: url("/avatar/evolution-climate.webp"); }
.avatar-monopolyDisney		{ background-image: url("/avatar/monopoly-disney.webp"); }
.avatar-obsession 				{ background-image: url("/avatar/obsession.webp"); }
.avatar-outlive 					{ background-image: url("/avatar/outlive.webp"); }
.avatar-panAm 						{ background-image: url("/avatar/pan-am.webp"); }
.avatar-parks							{ background-image: url("/avatar/parks.webp"); }
.avatar-riskGameOfThrones { background-image: url("/avatar/risk-game-of-thrones.webp"); }
.avatar-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
.avatar-sceneItFriends 		{ background-image: url("/avatar/scene-it-friends.webp"); }
.avatar-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
.avatar-trickerion 				{ background-image: url("/avatar/trickerion.webp"); }
.avatar-viticulture 			{ background-image: url("/avatar/viticulture.webp"); }
.avatar-wingspan 					{ background-image: url("/avatar/wingspan.webp"); }

.titleWrapper {
	align-items: center;
	display: flex;
	flex-direction: column;
	max-width: 900px;
	margin: 0 auto;
	margin-top: -150px;
	padding: 0 2rem 2rem;

	@media (min-width: 650px) {
		flex-direction: row;
	}
}

.textWrapper {
	justify-content: center;
	display: flex;
	flex-direction: column;
	line-height: 1.5;
	max-width: 330px;
	text-align: center;

	@media (min-width: 650px) {
		text-align: left;
	}
}

.title {
	color: #fff;
	margin: 0;
	margin-bottom: 1rem;
	text-shadow: 2px 3px 8px rgb(0 0 0 / 50%);

	@media (min-width: 650px) {
		margin: 0;
	}
}

.subtitle {
	color: #fff;
	margin: 0;
	text-shadow: 2px 3px 8px rgb(0 0 0 / 50%);
}

